--- a/index.html
+++ b/index.html
@@ -5,28 +5,14 @@
     <title></title>
   </head>
   <style>
-    circle {
-      fill: cadetblue;
-    }
-    line {
-      stroke: #ccc;
+    body {
+      margin:0;position:fixed;top:0;right:0;bottom:0;left:0; 
     }
     text {
       text-anchor: middle;
       font-family: "Helvetica Neue", Helvetica, sans-serif;
       fill: #666;
       font-size: 16px;
-    }
-    .node {
-    }
-    .link {
-      stroke: #999;
-      stroke-opacity: 0.6;
-      /*stroke-width: 1px;*/
-    }
-    svg {
-      width: 100vw;
-      height: 100vh;
     }
     #popup > div {
       position: fixed;
