--- a/index.html
+++ b/index.html
@@ -8,6 +8,11 @@
     body {
       margin:0;position:fixed;top:0;right:0;bottom:0;left:0; 
     }
+    svg {
+      width: 100%;
+      height: 100%;
+      transform-origin: top left;
+    }
     text {
       text-anchor: middle;
       font-family: "Helvetica Neue", Helvetica, sans-serif;
@@ -21,6 +26,7 @@
       border-radius: 5px;
       border: 1px solid #f5f5f5;
       display: none;
+      z-index: 1;
     }
     #popup > div.active {
       display: block;
